[gd_scene load_steps=26 format=3 uid="uid://brjib3kyg6i18"]

[ext_resource type="Script" uid="uid://cakyur8sjr1j7" path="res://slides/minigame.gd" id="1_dn0tp"]
[ext_resource type="Texture2D" uid="uid://cp8gsdaumsu5g" path="res://images/included/cheat graffiti.png" id="2_cqw1w"]
[ext_resource type="Texture2D" uid="uid://dhbacou6hki8u" path="res://images/included/sprites/bg/bge.png" id="2_p3nlj"]
[ext_resource type="Texture2D" uid="uid://b5l3waskt6uu2" path="res://images/included/sprites/trogdor/walk/left 1.png" id="3_dx1fx"]
[ext_resource type="Texture2D" uid="uid://bsj1t83wyq0vf" path="res://images/included/sprites/trogdor/walk/left 2.png" id="4_p3nlj"]
[ext_resource type="Texture2D" uid="uid://b6uay3pgaeb4i" path="res://images/included/sprites/trogdor/walk/left 3.png" id="5_k0fis"]
[ext_resource type="Texture2D" uid="uid://0qjnxvdbygk3" path="res://images/included/sprites/trogdor/walk/left 4.png" id="6_uq202"]
[ext_resource type="Texture2D" uid="uid://bstv22ofcgnjd" path="res://images/included/sprites/trogdor/walk/right 1.png" id="7_thg2h"]
[ext_resource type="Texture2D" uid="uid://dgjhsin1rnv21" path="res://images/included/sprites/trogdor/walk/right 2.png" id="8_6dqxt"]
[ext_resource type="Texture2D" uid="uid://dfeg82lnh51xv" path="res://images/included/sprites/trogdor/walk/right 3.png" id="9_vu1mo"]
[ext_resource type="Texture2D" uid="uid://bx74aaylfwqex" path="res://images/included/sprites/trogdor/walk/right 4.png" id="10_q6w76"]
[ext_resource type="Texture2D" uid="uid://bdn2w3qgdogfa" path="res://images/included/sprites/items/h1.png" id="12_6dqxt"]
[ext_resource type="Texture2D" uid="uid://bawsin2181wj7" path="res://images/included/sprites/trogdor/breath/breath 1.png" id="12_dw6jo"]
[ext_resource type="Texture2D" uid="uid://crcwqk0lmv8ns" path="res://images/included/sprites/trogdor/breath/breath 2.png" id="13_5y7ei"]
[ext_resource type="Texture2D" uid="uid://cgxxnecskmura" path="res://images/included/sprites/items/h2.png" id="13_vu1mo"]
[ext_resource type="Texture2D" uid="uid://vb4e51uk5quv" path="res://images/included/sprites/trogdor/breath/breath 3.png" id="14_23j15"]
[ext_resource type="Texture2D" uid="uid://rprrx63s3u5i" path="res://images/included/sprites/items/h3.png" id="14_q6w76"]
[ext_resource type="Texture2D" uid="uid://dihsa6yr7ktti" path="res://images/included/sprites/trogdor/breath/breath 4.png" id="15_5rfjy"]
[ext_resource type="Texture2D" uid="uid://colfjtlcs48v0" path="res://images/included/sprites/items/h4.png" id="15_6dg4r"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_dw6jo"]
points = PackedVector2Array(-135, -85, -60, 110, 50, 110, 135, -85, 0, -115)

[sub_resource type="SpriteFrames" id="SpriteFrames_6dg4r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dx1fx")
}, {
"duration": 1.0,
"texture": ExtResource("4_p3nlj")
}, {
"duration": 1.0,
"texture": ExtResource("5_k0fis")
}, {
"duration": 1.0,
"texture": ExtResource("6_uq202")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_thg2h")
}, {
"duration": 1.0,
"texture": ExtResource("8_6dqxt")
}, {
"duration": 1.0,
"texture": ExtResource("9_vu1mo")
}, {
"duration": 1.0,
"texture": ExtResource("10_q6w76")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_um71o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_dw6jo")
}, {
"duration": 1.0,
"texture": ExtResource("13_5y7ei")
}, {
"duration": 1.0,
"texture": ExtResource("14_23j15")
}, {
"duration": 1.0,
"texture": ExtResource("15_5rfjy")
}, {
"duration": 1.0,
"texture": ExtResource("12_dw6jo")
}, {
"duration": 1.0,
"texture": ExtResource("13_5y7ei")
}, {
"duration": 1.0,
"texture": ExtResource("14_23j15")
}, {
"duration": 1.0,
"texture": ExtResource("15_5rfjy")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dw6jo"]
size = Vector2(192.867, 83.704)

[sub_resource type="SpriteFrames" id="SpriteFrames_dw6jo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_6dqxt")
}, {
"duration": 1.0,
"texture": ExtResource("13_vu1mo")
}, {
"duration": 1.0,
"texture": ExtResource("14_q6w76")
}, {
"duration": 1.0,
"texture": ExtResource("15_6dg4r")
}],
"loop": false,
"name": &"collect",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5y7ei"]
radius = 176.867
height = 353.734

[node name="Minigame" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_dn0tp")
metadata/_custom_type_script = "uid://6mdcui7wkc47"

[node name="background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 2880.0
offset_bottom = 864.0
color = Color(0, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1445, 431)
scale = Vector2(6.69688, 3.79798)
texture = ExtResource("2_p3nlj")

[node name="right" type="Sprite2D" parent="."]
position = Vector2(2772, 774)
rotation = 3.14159
scale = Vector2(1, -1)
texture = ExtResource("2_cqw1w")

[node name="left" type="Sprite2D" parent="."]
position = Vector2(128, 778)
texture = ExtResource("2_cqw1w")

[node name="player" type="Area2D" parent="."]
position = Vector2(392.059, 413.658)
scale = Vector2(1.02143, 1.25442)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
scale = Vector2(1.44932, 1.48536)
shape = SubResource("ConvexPolygonShape2D_dw6jo")
debug_color = Color(0.925946, 0.215229, 0.426355, 0.42)

[node name="TrogdorSprite" type="AnimatedSprite2D" parent="player"]
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_6dg4r")
animation = &"walk_right"

[node name="FlameSprite" type="AnimatedSprite2D" parent="player"]
position = Vector2(269.092, -80.7885)
rotation = -3.14159
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_um71o")
frame = 7
frame_progress = 1.0

[node name="Area2D" type="Area2D" parent="player/FlameSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/FlameSprite/Area2D"]
position = Vector2(0.512756, -5.10509)
scale = Vector2(0.999999, 1)
shape = SubResource("RectangleShape2D_dw6jo")

[node name="Heart" type="RigidBody2D" parent="."]
collision_mask = 0
gravity_scale = 0.0

[node name="HeartAnimation" type="AnimatedSprite2D" parent="Heart"]
position = Vector2(1061.07, 614.717)
scale = Vector2(2.44697, 2.44697)
sprite_frames = SubResource("SpriteFrames_dw6jo")
animation = &"collect"
metadata/_edit_group_ = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Heart"]
position = Vector2(1033.13, 623.162)
scale = Vector2(5.14882, 3.632)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Heart"]
position = Vector2(1030.61, 680.149)
scale = Vector2(0.545464, 0.498918)
shape = SubResource("CapsuleShape2D_5y7ei")
metadata/_edit_group_ = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="PlayerStart" type="Marker2D" parent="."]
position = Vector2(2248.55, 621.157)
scale = Vector2(1.11178, 1.34242)

[connection signal="body_entered" from="player" to="." method="_on_player_body_entered"]
[connection signal="animation_finished" from="player/FlameSprite" to="." method="_on_flame_sprite_animation_finished"]
[connection signal="animation_finished" from="Heart/HeartAnimation" to="." method="_on_heart_animation_animation_finished"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
